package edu.xanderson.ritimoTask.model.entity;

public class OrganizationMembership {

}
